policies/templates/gcp_sql_public_ip_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-sql-public-ip-v1
spec:
  crd:
    spec:
      names:
        kind: GCPSQLPublicIpConstraintV1
        plural: gcpsqlpublicipconstraintsv1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/sql_public_ip.rego")
         #
         # Copyright 2019 Google LLC
         #
         # Licensed under the Apache License, Version 2.0 (the "License");
         # you may not use this file except in compliance with the License.
         # You may obtain a copy of the License at
         #
         #      http://www.apache.org/licenses/LICENSE-2.0
         #
         # Unless required by applicable law or agreed to in writing, software
         # distributed under the License is distributed on an "AS IS" BASIS,
         # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         # See the License for the specific language governing permissions and
         # limitations under the License.
         #
           
           package templates.gcp.GCPSQLPublicIpConstraintV1
           
           import data.validator.gcp.lib as lib
           
           deny[{
             "msg": message,
             "details": metadata,
           }] {
             asset := input.asset
             asset.asset_type == "sqladmin.googleapis.com/Instance"
             
             ip_config := lib.get_default(asset.resource.data.settings, "ipConfiguration", {})
             ipv4 := lib.get_default(ip_config, "ipv4Enabled", true)
             ipv4 == true           
             
             message := sprintf("%v is not allowed to have a Public IP.", [asset.name])
             metadata := {"resource": asset.name}
           }
           #ENDINLINE
